--- a/content/posts/2010.rst
+++ b/content/posts/2010.rst
@@ -3,6 +3,7 @@
 
 :date: 2011-01-03 00:00
 :category: Life
+:featured: True
 
 
 Yesterday I stopped by the Apple store in Fair Oaks Shopping Center
