--- a/content/posts/110515-requests-v040.rst
+++ b/content/posts/110515-requests-v040.rst
@@ -12,19 +12,29 @@ strives to keep things as simple as possible. `Lean more
 <http://python-requests.org>`_.
 
 Since the initial release, 3 months ago, Requests quickly became my most popular
-Python project. It's approaching
-`200 Watchers <https://github.com/kennethreitz/requests/watchers>`_
-`on GitHub <https://github.com/kennethreitz/requests>`_, and has a number
-of happy repetitive users.
-
-**Daniel Greenfeld**
-    Nuked a 1200 LOC spaghetti code library with 10 lines of code thanks to @kennethreitz’s request library. Today has been AWESOME
-
 
 It is `being used internally
 <http://docs.python-requests.org/en/latest/index.html#testimonals>`_ at
 Twitter, Inc and The Library of Congress. If your company (or project) is using
 Requests internally, send me an email!
+
+Python project. It's approaching
+`200 Watchers <https://github.com/kennethreitz/requests/watchers>`_
+`on GitHub <https://github.com/kennethreitz/requests>`_, and has a number
+of happy repetitive users:
+
+
+**Daniel Greenfeld**
+    Nuked a 1200 LOC spaghetti code library with 10 lines of code thanks to @kennethreitz’s request library. Today has been AWESOME
+
+**Kenny Meyers**
+    Python HTTP: When in doubt, or when not in doubt, use Requests. Beautiful, simple, Pythonic.
+
+**Rich Leland**
+    Requests is awesome. That is all.
+
+**Steve Pike**
+    I can never remember how to do it the regular way. import requests; requests.get() is just so easy!
 
 
 Community Update
